# telemetry_benchmarks

./: README.md  bench_many_timeseries.py  bench_reader.py  bench_single_pointcloud.py  bench_single_timeseries.py  buf.gen.yaml  config.py  main.py  pyproject.toml  robot_arm_sim.py  run_all_benchmarks.py
layouts/: foxglove_so101.json  many_timeseries.json
proto/: joint_state.proto
src/telemetry_benchmarks/sim/: config.py  datalogger.py  mcap_datalogger.py  rerun_datalogger.py  robot_arm_sim.py  video_encoder.py
src/telemetry_benchmarks/sim/pb2/: joint_state_pb2.py  joint_state_pb2.pyi
