[project]
name = "telemetry-benchmarks"
version = "0.1.0"
description = "A project to benchmark the performance of the most popular robotics recording sdk's for Python."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "av>=16.0.1",
    "cyclopts>=4.2.4",
    "foxglove-schemas-protobuf>=0.3.0",
    "foxglove-sdk>=0.16.1",
    "genesis-world>=0.3.7",
    "loguru>=0.7.3",
    "mcap>=1.3.0",
    "mcap-protobuf-support>=0.5.3",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "protobuf>=6.33.1",
    "rerun-sdk>=0.27.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "urdfpy>=0.0.1",
]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
